package quartaB;

public class Cuoco {
    public void preparaPiatto(Piatto piatto) {
        System.out.println("Sto preparando il piatto" + piatto.getDescrizione());
    }
}
