package quartaB;

public class Menu {
    private Piatto[] piatti;

    public Menu(Piatto[] piatti) {
        this.piatti = piatti;
    }
}
