package quartaB;

public class Ristorante {
    private Menu menu;
    private Cuoco[] cuochi;

    public Ristorante(Menu menu, Cuoco[] cuochi) {
        this.menu = menu;
        this.cuochi = cuochi;
    }

}
