package quartaB;

public class Sugo {
    private String nome;

    public Sugo(String nome) {
        this.nome = nome;
    }

    public String getNome() {
        return nome;
    }
}
